created a block with text

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <div class="nuove">
                 Ogni giorno nuove esperienze
             </div>
+            <div class="people">
+                Scopri sapori, culture e amici con il social eating
+            </div>
         </div>
     </div>
 </div>
