--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
             <div class="people">
                 Scopri sapori, culture e amici con il social eating
             </div>
+            <div class="buttons">
+                <button class="primary">
+                    Scopri gli altri eventi
+                </button>
+            </div>
+            <div class="food">
+                <img src="img/evgeniy.png">
+                <div class="">
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
