add images with food

--- a/index.html
+++ b/index.html
@@ -45,9 +45,29 @@
                 </button>
             </div>
             <div class="food">
-                <img src="img/evgeniy.png">
-                <div class="">
-                    
+                <div class="nostri">
+                    I nostri eventi
+                    <div class="social">
+                        Questo mese hai tanti buoni motivi per
+                        provare il social eating! Non ti
+                        resta che provarli tutti.
+                    </div>
+                </div>
+                <div class="aria">
+                    <img src="img/evento.png">
+                </div>
+                <div class="mussels">
+                    <div class="mare">
+                        MARE
+                    </div>
+                    <div class="frutti">
+                        Frutti di mare che
+                        passione! Ecco
+                        l’evento perfetto
+                    </div>
+                </div>
+                <div class="french-fries">
+
                 </div>
             </div>
         </div>
