add images with food

--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
                     </div>
                 </div>
                 <div class="french-fries">
-
+                    <div class="kitchen">
+                        NOVELLE COUISINE
+                    </div>
+                    <div class="evento">
+                        Un evento da leccarsi
+                        le dita! 10 specialità
+                        mai provate
+                    </div>
                 </div>
             </div>
         </div>
