--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                     </div>
                 </div>
             </div>
+            <div class="lontana">
+                In una terra lontana, dietro le
+                montagne Parole, lontani dalle terre di
+                Vocalia e Consonantia.
+            </div>
         </div>
     </div>
 </div>
