--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                 montagne Parole, lontani dalle terre di
                 Vocalia e Consonantia.
             </div>
+            <div class="buttons-1">
+                <button class="altri">
+                    Scopri gli altri eventi
+                </button>
+            </div>
         </div>
     </div>
 </div>
