--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                     Scopri gli altri eventi
                 </button>
             </div>
+            <div class="pink">
+
+            </div>
         </div>
     </div>
 </div>
