--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </ul>
             </div>
         </div>
+    </div>
         <div class="img">
             <div class="nuove">
                 Ogni giorno nuove esperienze
@@ -87,9 +88,12 @@
                     Scopri gli altri eventi
                 </button>
             </div>
-            <div class="pink">
-
-            </div>
+        </div>
+</div>
+<div class="pink">
+    <div class="wrapper">
+        <div class="coste">
+            LASCIATI ISPIRARE
         </div>
     </div>
 </div>
