--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
              </div>
         </div>
     </div>
+    <div class="task">
+        <div class="wrapper">
+            <div class="img">
+                <div class="nuove">
+                    Ogni giorno nuove esperienze
+                </div>
+                <div class="people">
+                    Scopri sapori, culture e amici con il social eating
+                </div>
+                <div class="buttons">
+                    <button class="primary">
+                        Scopri gli altri eventi
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
