--- a/index.html
+++ b/index.html
@@ -12,30 +12,22 @@
                 <div class="title">
                     Eaty
                 </div>
-                <div class="menu">
-                    <ul>
-                        <li class="menu-item">
-                            Home
-                        </li>
-                        <li class="menu-item">
-                            Eventi
-                        </li>
-                        <li class="menu-item">
-                            Ricette
-                        </li>
-                        <li class="menu-item">
-                            Chef a domicilio
-                        </li>
-                        <li class="menu-item">
-                            Contatti
-                        </li>
-                     </ul>
+                <div class="home">
+                    Home
                 </div>
-             </div>
-        </div>
-    </div>
-    <div class="task">
-        <div class="wrapper">
+                <div class="eventi">
+                    Eventi
+                </div>
+                <div class="ricette">
+                    Ricette
+                </div>
+                <div class="chef">
+                    Chef a domicilio
+                </div>
+                <div class="contatti">
+                    Contatti
+                </div>
+            </div>
             <div class="img">
                 <div class="nuove">
                     Ogni giorno nuove esperienze
@@ -47,6 +39,19 @@
                     <button class="primary">
                         Scopri gli altri eventi
                     </button>
+                </div>
+                <div class="food">
+                    <div class="nostri">
+                        I nostri eventi
+                        <div class="tutti">
+                            Questo mese hai tanti buoni motivi
+                            per provare il social eating! Non ti
+                            resta che provarli tutti.
+                        </div>
+                    </div>
+                    <div class="evento">
+                        <img src="img/evento.png">
+                    </div>
                 </div>
             </div>
         </div>
