--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <div class="food">
                     <div class="nostri">
                         I nostri eventi
-                        <div class="tutti">
-                            Questo mese hai tanti buoni motivi
-                            per provare il social eating! Non ti
+                        <div class="social">
+                            Questo mese hai tanti buoni motivi per
+                            provare il social eating! Non ti
                             resta che provarli tutti.
                         </div>
                     </div>
-                    <div class="evento">
+                    <div class="aria">
                         <img src="img/evento.png">
                     </div>
                 </div>
