--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
                     <div class="aria">
                         <img src="img/evento.png">
                     </div>
+                    <div class="mussels">
+                        <div class="mare">
+                            MARE
+                        </div>
+                        <div class="frutti">
+                            Frutti di mare che
+                            passione! Ecco
+                            l’evento perfetto
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
