--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
                             l’evento perfetto
                         </div>
                     </div>
+                    <div class="french-fries">
+                        <div class="kitchen">
+                            NOVELLE COUISINE
+                        </div>
+                        <div class="evento">
+                            Un evento da leccarsi
+                            le dita! 10 specialità
+                            mai provate
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
