--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="lontana">
+                    In una terra lontana, dietro le
+                    montagne Parole, lontani dalle terre di
+                    Vocalia e Consonantia.
+                </div>
+                
             </div>
         </div>
     </div>
