--- a/index.html
+++ b/index.html
@@ -78,9 +78,25 @@
                     montagne Parole, lontani dalle terre di
                     Vocalia e Consonantia.
                 </div>
-                
+                <div class="buttons-1">
+                    <button class="altri">
+                        Scopri gli altri eventi
+                    </button>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="work">
+            <div class="pink">
+                <div class="las">
+                    LASCIATI ISPIRARE
+                </div>
+                <div class="brace">
+                    <br>Patate alla</br>
+                    <br>brace con</br>
+                    <br>buccia</br>
+                </div>
+            </div>
     </div>
 </body>
 </html>
