--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
                     <br>brace con</br>
                     <br>buccia</br>
                 </div>
+                <div class="casuali">
+                    In una terra lontana, dietro le
+                    montagne Parole, lontani dalle
+                    terre di Vocalia e Consonantia,
+                    vivono i testi casuali. Vivono
+                    isolati nella cittadina di Lettere,
+                    sulle coste del Semantico, un
+                    immenso oceano linguistico.
+                </div>
+                <div class="buttons-2">
+                    <button class="altri">
+                        Scopri gli altri eventi
+                    </button>
+                </div>
             </div>
     </div>
 </body>
