--- a/index.html
+++ b/index.html
@@ -88,27 +88,33 @@
     </div>
     <div class="work">
             <div class="pink">
-                <div class="las">
-                    LASCIATI ISPIRARE
+                <div class="stas">
+                    <div class="las">
+                        LASCIATI ISPIRARE
+                    </div>
+                    <div class="brace">
+                        <br>Patate alla</br>
+                        <br>brace con</br>
+                        <br>buccia</br>
+                    </div>
+                    <div class="casuali">
+                        In una terra lontana, dietro le
+                        montagne Parole, lontani dalle
+                        terre di Vocalia e Consonantia,
+                        vivono i testi casuali. Vivono
+                        isolati nella cittadina di Lettere,
+                        sulle coste del Semantico, un
+                        immenso oceano linguistico.
+                    </div>
+                    <div class="buttons-2">
+                        <button class="altri">
+                            Scopri gli altri eventi
+                        </button>
+                     </div>
                 </div>
-                <div class="brace">
-                    <br>Patate alla</br>
-                    <br>brace con</br>
-                    <br>buccia</br>
-                </div>
-                <div class="casuali">
-                    In una terra lontana, dietro le
-                    montagne Parole, lontani dalle
-                    terre di Vocalia e Consonantia,
-                    vivono i testi casuali. Vivono
-                    isolati nella cittadina di Lettere,
-                    sulle coste del Semantico, un
-                    immenso oceano linguistico.
-                </div>
-                <div class="buttons-2">
-                    <button class="altri">
-                        Scopri gli altri eventi
-                    </button>
+                <div class="job">
+                    <img src="img/job.png" width="197"
+                         height="344">
                 </div>
             </div>
     </div>
