--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <img src="img/job.png" width="197"
                          height="344">
                 </div>
+                <div class="potato">
+
+                </div>
             </div>
     </div>
 </body>
