descriptions of dishes. Added button for orders

--- a/index.html
+++ b/index.html
@@ -87,39 +87,58 @@
         </div>
     </div>
     <div class="work">
-            <div class="pink">
-                <div class="stas">
-                    <div class="las">
-                        LASCIATI ISPIRARE
-                    </div>
-                    <div class="brace">
-                        <br>Patate alla</br>
-                        <br>brace con</br>
-                        <br>buccia</br>
-                    </div>
-                    <div class="casuali">
-                        In una terra lontana, dietro le
-                        montagne Parole, lontani dalle
-                        terre di Vocalia e Consonantia,
-                        vivono i testi casuali. Vivono
-                        isolati nella cittadina di Lettere,
-                        sulle coste del Semantico, un
-                        immenso oceano linguistico.
-                    </div>
-                    <div class="buttons-2">
-                        <button class="altri">
-                            Scopri gli altri eventi
-                        </button>
-                     </div>
+        <div class="pink">
+            <div class="stas">
+                <div class="las">
+                    LASCIATI ISPIRARE
                 </div>
-                <div class="job">
-                    <img src="img/job.png" width="197"
-                         height="344">
+                <div class="brace">
+                    <br>Patate alla</br>
+                    <br>brace con</br>
+                    <br>buccia</br>
                 </div>
-                <div class="potato">
-
+                <div class="casuali">
+                    In una terra lontana, dietro le
+                    montagne Parole, lontani dalle
+                    terre di Vocalia e Consonantia,
+                    vivono i testi casuali. Vivono
+                    isolati nella cittadina di Lettere,
+                    sulle coste del Semantico, un
+                    immenso oceano linguistico.
+                </div>
+                <div class="buttons-2">
+                    <button class="altri">
+                        Scopri gli altri eventi
+                    </button>
                 </div>
             </div>
+            <div class="job">
+                <img src="img/job.png" width="197" height="344">
+            </div>
+            <div class="potato">
+
+            </div>
+        </div>
+    </div>
+    <div class="from">
+        <div class="cok">
+
+        </div>
+        <div class="tua">
+            Vuoi uno chef a casa tua?
+            <div class="senza">
+                Organizza i tuoi eventi senza pensare a nulla
+            </div>
+            <div class="sulle">
+                <br>In una terra lontana, dietro le montagne Parole, lontani dalle terre di Vocalia e Consonantia, vivono i testi</br>
+                <br>casuali. Vivono isolati nella cittadina di Lettere, sulle coste del Semantico, un immenso oceano linguistico.</br>
+            </div>
+            <div class="buttons-3">
+                <button class="altri">
+                    Scopri gli altri eventi
+                </button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
