--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
         </div>
     </div>
     <div class="footer">
-
+        <div class="nella">
+            <br>In una terra lontana, dietro le montagne Parole, lontani dalle terre di Vocalia e Consonantia, vivono i</br>
+            <br>testi casuali. Vivono isolati nella cittadina di Lettere, sulle coste del Semantico.</br>
+        </div>
     </div>
 </body>
 </html>
