--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@
         <div class="tua">
             Vuoi uno chef a casa tua?
             <div class="senza">
-                Organizza i tuoi eventi senza pensare a nulla
+                Organizza i tuoi eventi senza pensa
+                re a nulla
             </div>
             <div class="sulle">
                 <br>In una terra lontana, dietro le montagne Parole, lontani dalle terre di Vocalia e Consonantia, vivono i testi</br>
                 <br>casuali. Vivono isolati nella cittadina di Lettere, sulle coste del Semantico, un immenso oceano linguistico.</br>
-            </div>
+           </div>
             <div class="buttons-3">
                 <button class="altri">
                     Scopri gli altri eventi
@@ -141,9 +142,17 @@
         </div>
     </div>
     <div class="footer">
-        <div class="nella">
-            <br>In una terra lontana, dietro le montagne Parole, lontani dalle terre di Vocalia e Consonantia, vivono i</br>
-            <br>testi casuali. Vivono isolati nella cittadina di Lettere, sulle coste del Semantico.</br>
+        <div class="wrapper-3">
+            <div class="nella">
+                <br>In una terra lontana, dietro le montagne Parole, lontani dalle terre di Vocalia e Consonantia, vivono i</br>
+                <br>testi casuali. Vivono isolati nella cittadina di Lettere, sulle coste del Semantico.</br>
+            </div>
+            <div class="rights">
+                Eaty Copiright 2017 all rights reserved
+            </div>
+        </div>
+        <div class="box">
+
         </div>
     </div>
 </body>
