--- a/index.html
+++ b/index.html
@@ -147,12 +147,16 @@
                 <br>In una terra lontana, dietro le montagne Parole, lontani dalle terre di Vocalia e Consonantia, vivono i</br>
                 <br>testi casuali. Vivono isolati nella cittadina di Lettere, sulle coste del Semantico.</br>
             </div>
-            <div class="rights">
-                Eaty Copiright 2017 all rights reserved
+            <div class="box">
+                <div class="inserisci">
+                    Inserisci la tua email
+                </div>
             </div>
-        </div>
-        <div class="box">
-
+            <div class="buttons-4">
+                <button class="iscriviti">
+                    Iscriviti
+                </button>
+            </div>
         </div>
     </div>
 </body>
