--- a/index.html
+++ b/index.html
@@ -151,12 +151,18 @@
                 <div class="inserisci">
                     Inserisci la tua email
                 </div>
+                <div class="rendemarco">
+                    Designed by Rendemarco
+                </div>
             </div>
             <div class="buttons-4">
                 <button class="iscriviti">
                     Iscriviti
                 </button>
             </div>
+        </div>
+        <div class="all">
+            Eaty Copiright 2017 all rights reserved
         </div>
     </div>
 </body>
